--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
             </div>
         </div>
         <div class="row">
-            <button id="strikebutton">Submit</button>
+            <button id="strikebutton" onclick="handlestrike()">Submit</button>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
