--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="row">
             <div class="col">
                 <img src="Images/RCB.jpeg" class="pic" alt="RCB" width="150" height="150">
-                <p class="teamname">RCB</p>
-                <div class="row runs">
+                <p class="teamname" id="team1name">RCB</p>
+                <div class="row runs" id="team1runs">
                     <div>-</div>
                     <div>-</div>
                     <div>-</div>
@@ -21,13 +21,15 @@
                     <div>-</div>
                 </div>
             </div>
-            <div class="score">
-                0-0
+            <div class="row score">
+                <div id="team1score">0</div>
+                <div>-</div>
+                <div id="team2score">0</div>
             </div>
             <div class="col">
                 <img src="Images/KXIP.jpeg" class="pic" alt="KXIP" width="150" height="150">
-                <p class="teamname">KXIP</p>
-                <div class="row runs">
+                <p class="teamname" id="team2name">KXIP</p>
+                <div class="row runs" id="team2runs">
                     <div>-</div>
                     <div>-</div>
                     <div>-</div>
@@ -40,6 +42,7 @@
         <div class="row">
             <button id="strikebutton" onclick="handlestrike()">Submit</button>
         </div>
+        <div id="result"></div>
     </div>
     <script src="app.js"></script>
 </body>
